<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UploadResearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/mena_logo_description"
            android:src="@drawable/mena_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_research_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_research_abstract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:gravity="top"
                android:hint="@string/abstract_word"
                android:maxLines="12"
                android:minLines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_research_publication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publication_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <SeekBar
            android:id="@+id/sb_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_research_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/year" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_doi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doi" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chooseFile"
                android:text="@string/choose_file" />

            <TextView
                android:id="@+id/tv_uploaded_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/no_file_chosen"
                android:textSize="20sp" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_research_co_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/co_authors" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.maad.menaresearchgate.data.research.CustomTokenView
                android:id="@+id/et_research_interests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/research_interests" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:onClick="uploadResearch"
            android:text="@string/upload"
            android:textColor="@color/lighterBlue"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>